scribble/scribble-assertions/src/test/resources/good/extensions/assrtcore/safety/assrtprog/AssrtCoreTest13.scr
module good.extensions.assrtcore.safety.assrtprog.AssrtCoreTest13;


type <java> "java.lang.Integer" from "rt.jar" as int;  // FIXME: int keyword


//*
global protocol Proto1(role A, role B)
{
	1(x:int) from A to B; 
	choice at B
	{
		2() from B to A; @"(x>0)"  // Assrt-prog because of other choice branch
	}		
	or { 3() from B to A; }  // Unsat if case commented
}
//*/
